--- a/static/slides/shinydev000.html
+++ b/static/slides/shinydev000.html
@@ -22,7 +22,7 @@
 
 layout: true
 
-&lt;div class="my-footer"&gt;&lt;span&gt;Shiny Developer Series&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;Episode 0: Launch!&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;shinydevseries.com&lt;/span&gt;&lt;/div&gt; 
+&lt;div class="my-footer"&gt;&lt;span&gt;shinydevseries.com/ep0&lt;/span&gt;&lt;/div&gt; 
 
 &lt;!-- this adds the link footer to all slides, depends on my-footer class in css--&gt;
 
@@ -74,6 +74,40 @@ Shiny Developer Series
 
 ![](https://media.giphy.com/media/3oEdv03JAv74J6KGTS/giphy.gif)
 
+]
+
+---
+background-image: url(img/mountain1.jpg)
+background-size: cover
+
+---
+
+# The Shiny-verse Takes Shape
+
+Wealth of packages built by Shiny developers/users
+
+* User interfaces
+* Interactive HTML widgets
+* Backend enhancements
+* Workflow builders
+
+---
+# Learning the Shiny Basics
+
+.left-column-big[
+
+I recommend the following resources to help you begin to climb the [__shiny ladder of enlightenment__](https://github.com/rstudio/ShinyDeveloperConference/blob/master/Reactivity/slides.Rmd#ladder-of-enlightenment):
+
+* Webinars/conference presentations from RStudio:
+    + [Effective Reactive Programming](https://www.rstudio.com/resources/videos/effective-reactive-programming/)
+    + [Debugging Techniques](https://www.rstudio.com/resources/videos/debugging-techniques/)
+* [Official Shiny documentation articles](https://shiny.rstudio.com/articles_)
+* [Building Shiny apps - an interactive tutorial](https://deanattali.com/blog/building-shiny-apps-tutorial/) (Dean Attali)
+* [A totally different, read-me-first Shiny tutorial](http://www.open-meta.org/technology/a-totally-different-read-me-first-shiny-tutorial/) (Tom Weishaar)
+]
+
+.right-column-small[
+.center[![:scale 80%](img/portablejim-Ladder-flat.svg)]
 ]
 
 ---
@@ -142,25 +176,7 @@ class: center, middle, inverse
 
 ---
 
-# Learning the Shiny Basics
 
-.left-column-big[
-
-I recommend the following resources to help you begin to climb the [__shiny ladder of enlightenment__](https://github.com/rstudio/ShinyDeveloperConference/blob/master/Reactivity/slides.Rmd#ladder-of-enlightenment):
-
-* Webinars/conference presentations from RStudio:
-    + [Effective Reactive Programming](https://www.rstudio.com/resources/videos/effective-reactive-programming/)
-    + [Debugging Techniques](https://www.rstudio.com/resources/videos/debugging-techniques/)
-* [Official Shiny documentation articles](https://shiny.rstudio.com/articles_)
-* [Building Shiny apps - an interactive tutorial](https://deanattali.com/blog/building-shiny-apps-tutorial/) (Dean Attali)
-* [A totally different, read-me-first Shiny tutorial](http://www.open-meta.org/technology/a-totally-different-read-me-first-shiny-tutorial/) (Tom Weishaar)
-]
-
-.right-column-small[
-.center[![:scale 80%](img/portablejim-Ladder-flat.svg)]
-]
-
----
 
 ## The Journey Begins!
 
