--- a/static/slides/shinydev000.html
+++ b/static/slides/shinydev000.html
@@ -77,10 +77,76 @@ Shiny Developer Series
 ]
 
 ---
-background-image: url(img/mountain1.jpg)
+class: inverse, center, top
+background-image: url(img/shinydevcon_pic.jpg)
 background-size: cover
 
+# ShinyDevCon (2016)
+
 ---
+class: inverse, center, bottom
+background-image: url(img/rpharma_pic.jpeg)
+background-size: cover
+
+## [rpodcast.gitlab.io/rpharma2018/](http://rpodcast.gitlab.io/rpharma2018/)
+
+
+---
+class: inverse, center, top
+background-image: url(img/rsconf2019_crowd.jpeg)
+background-size: cover
+
+# `rstudio::conf(2019L)`
+
+---
+
+.pull-left[
+&lt;blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"&gt;&lt;p lang="en" dir="ltr"&gt;A fantastic talk on the why and how of &lt;a href="https://twitter.com/hashtag/rstats?src=hash&amp;amp;ref_src=twsrc%5Etfw"&gt;#rstats&lt;/a&gt; shiny modules by &lt;a href="https://twitter.com/theRcast?ref_src=twsrc%5Etfw"&gt;@theRcast&lt;/a&gt; Modules are absolutely essential to scaling your app efficiently and making it easy to reason about.  &lt;a href="https://t.co/XJCBOzN9b9"&gt;https://t.co/XJCBOzN9b9&lt;/a&gt; &lt;a href="https://twitter.com/hashtag/rstudioconf?src=hash&amp;amp;ref_src=twsrc%5Etfw"&gt;#rstudioconf&lt;/a&gt; &lt;a href="https://t.co/Ly3zzqSiDc"&gt;pic.twitter.com/Ly3zzqSiDc&lt;/a&gt;&lt;/p&gt;&amp;mdash; Nick Strayer (@NicholasStrayer) &lt;a href="https://twitter.com/NicholasStrayer/status/1086344823932706816?ref_src=twsrc%5Etfw"&gt;January 18, 2019&lt;/a&gt;&lt;/blockquote&gt;
+&lt;script async src="https://platform.twitter.com/widgets.js" charset="utf-8"&gt;&lt;/script&gt;
+
+]
+
+.pull-right[
+
+.center[
+![](img/rsconf2019_modules_slide.jpeg)
+[rpodcast.github.io/rsconf-2019](https://rpodcast.github.io/rsconf-2019)
+]
+]
+
+.center[
+## Ames Housing Explorer: [gallery.shinyapps.io/ames-explorer/](https://gallery.shinyapps.io/ames-explorer/)
+]
+
+---
+class: inverse, center, top
+background-image: url(img/chirunconf_pic.jpg)
+background-size: cover
+
+# Chicago R Unconference (2019)
+
+---
+
+.pull-left[
+&lt;blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"&gt;&lt;p lang="en" dir="ltr"&gt;spent the last couple of days at &lt;a href="https://twitter.com/hashtag/chirunconf?src=hash&amp;amp;ref_src=twsrc%5Etfw"&gt;#chirunconf&lt;/a&gt; building a totally 🔥 (if i do say so myself) shiny app with &lt;a href="https://twitter.com/theRcast?ref_src=twsrc%5Etfw"&gt;@theRcast&lt;/a&gt;, designed to help see available issues (and celebrate closed ones!) in an &lt;a href="https://twitter.com/hashtag/rstats?src=hash&amp;amp;ref_src=twsrc%5Etfw"&gt;#rstats&lt;/a&gt; unconference setting. comes with a default repo, but you can add others! &lt;a href="https://t.co/9Md7V3OUcQ"&gt;pic.twitter.com/9Md7V3OUcQ&lt;/a&gt;&lt;/p&gt;&amp;mdash; Sharla Gelfand (@sharlagelfand) &lt;a href="https://twitter.com/sharlagelfand/status/1104956277413867520?ref_src=twsrc%5Etfw"&gt;March 11, 2019&lt;/a&gt;&lt;/blockquote&gt;
+&lt;script async src="https://platform.twitter.com/widgets.js" charset="utf-8"&gt;&lt;/script&gt;
+]
+
+.pull-right[
+
+.center[
+![](img/chirunconf_app.gif)
+[rpodcast.shinyapps.io/unconfissues](https://rpodcast.shinyapps.io/unconfissues/)
+]
+]
+
+.center[
+## [github.com/unconf-toolbox/unconfissues](https://github.com/unconf-toolbox/unconfissues)
+]
+
+---
+
+
 
 # The Shiny-verse Takes Shape
 
@@ -193,6 +259,7 @@ class: center, middle, inverse
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script src="macros.js"></script>
+<script src="https://platform.twitter.com/widgets.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "16:9",
 "highlightStyle": "github",
